# CoEvoSkills

./: .gitignore  AGENTS.md  CoEvoSkills.md  README.md  pyproject.toml  server_connect.txt
.opencode/: opencode.jsonc
configs/: default.yaml  models.yaml
engine/: __init__.py  context.py  evolution.py  scheduler.py
eval/: __init__.py  metrics.py  reporter.py  transfer.py
layers/oracle/: __init__.py  oracle.py
layers/skill_generator/: __init__.py  generator.py  prompts.py  skill_manager.py
layers/surrogate_verifier/: __init__.py  feedback.py  test_generator.py  test_runner.py  verifier.py
output/: results.json
output/skills/citation-check/: SKILL.md
output/skills/edit-pdf/: SKILL.md
output/skills/evo-bib-verifier/: SKILL.md
output/skills/evo-bib-verify/: SKILL.md
output/skills/evo-bibliography-verification/: SKILL.md
output/skills/evo-bibtex-integrity-checker/: SKILL.md
output/skills/evo-bibtex-integrity-verification/: SKILL.md
output/skills/evo-bibtex-verification/: SKILL.md
output/skills/evo-citation-verification/: SKILL.md
output/skills/evo-citation-verifier/: SKILL.md
output/skills/evo-civ6-optimizer/: SKILL.md
repository/: __init__.py  skill.py  store.py  task.py
scripts/: evaluate.py  evolve.py  transfer.py
utils/: __init__.py  colors.py  config.py  logger.py
utils/agent/: __init__.py  loop.py  opencode_harness.py  prompts.py
utils/executor/: __init__.py  environment.py  executor.py  filesystem.py  sandbox.py
utils/llm/: __init__.py  anthropic.py  client.py  deepseek.py  openai.py  types.py
(+57 files in other folders)
